# CPP-Practice

./: README.md
1 Assignment/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
2 Assignment/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
3 Assignment/: CMakeLists.txt
3 Assignment/include/: myfunctions.hh
3 Assignment/src/: main.cpp  myfunctions.cpp
4 Assignment/: CMakeLists.txt
4 Assignment/include/: myClasses.hh
4 Assignment/src/: main.cpp  myClasses.cpp
5 Assignment/: CMakeLists.txt
5 Assignment/include/: vector.hh
5 Assignment/src/: main.cpp  vector.cpp
6 Assignment/: CMakeLists.txt
6 Assignment/include/: ATM.hh  accessSpecifier.hh  inheritence.hh
6 Assignment/src/: ATM.cpp  main.cpp
7 Assignment/: CMakeLists.txt
7 Assignment/include/: Circle.hh  Shape.hh  Square.hh  Triangle.hh
7 Assignment/src/: circle.cpp  main.cpp  shape.cpp  square.cpp  triangle.cpp
8 Assignment/: CMakeLists.txt
8 Assignment/include/: vector.hh
8 Assignment/src/: tests.cpp  vector.cpp
